# streamlit-analytics2

./: .flake8  .gitignore  Makefile  Pipfile  analytics.toml  mypy.ini  pyproject.toml  sa2_data.json
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/workflows/: release.yml
.streamlit/: analytics.toml
examples/: minimal.py
examples/.streamlit/: analytics.toml
examples/pages/: Streamlit_Analytics_Demo.py  all-features.py  create_key.py  firebase_test.py
src/streamlit_analytics2/: __init__.py  config.py  display.py  firestore.py  main.py  state.py  utils.py  widgets.py  wrappers.py
tests/: run_checks.sh
