[build-system]
requires = ["setuptools>=69.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_analytics2"
version = "0.8.7"
description = "Track & visualize user interactions with your streamlit app."
authors = [{ name = "444B", email = "contact+pypi@444b.me" }]
maintainers = [{ name = "444B", email = "contact+pypi@444b.me" }]
license = { file = "LICENSE" }
readme = {file = ".github/README.md", content-type = "text/markdown"}
keywords = ["streamlit", "analytics", "visualization", "streamlit-analytics", "streamlit-analytics2"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta"
]
requires-python = ">=3.12"
dependencies = [
    "streamlit >= 1.41",
    "pandas",
    "altair",
    "google-cloud-firestore",
    "typing_extensions"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "bandit",
    "pytest",
    "pandas-stubs",
    "build",
    "twine"
]

[project.urls]
Repository = "https://github.com/444B/streamlit-analytics2"
Documentation = "https://github.com/444B/streamlit-analytics2/wiki"
Issues = "https://github.com/444B/streamlit-analytics2/issues"
Changelog = "https://github.com/444B/streamlit-analytics2/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/444B/streamlit-analytics2/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true

[tool.uv]
python = ">=3.12"
exclude = ["__pycache__", "*.pyc"]